--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,36 +12,15 @@
 <body>
   <div class="page">
     <div class = "container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <div class="col-md-3 mb-2 mb-md-0">
-          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-            <img src = "{{url_for('static',filename = 'image/elephant.png')}}", alt = 'low', class = "header_img">
-          </a>
-        </div>
-  
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">  
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{{url_for('index')}}" class="nav-link px-2 link-secondary">Main</a></li>
-          <li><a href="{{url_for('about')}}" class="nav-link px-2">About Us</a></li>
+          <li><a href="{{url_for('add_test')}}" class="nav-link px-2">Добавить тест</a></li>
+          <li><a href="{{url_for('add_teacher')}}" class="nav-link px-2">Добавить учителя</a></li>
         </ul>
-  
-        <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-outline-primary me-2">Login</button>
-          <button type="button" class="btn btn-primary">Sign-up</button>
-        </div>
       </header>
     <div class = "content">
       {% block content %}{% endblock %}
     </div>
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-      </ul>
-      <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
-    </footer>
   </div>
 </div>
 </body>
