feat: added Review class, more html

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,8 +14,9 @@
     <div class = "container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">  
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{{url_for('add_test')}}" class="nav-link px-2">Добавить тест</a></li>
-          <li><a href="{{url_for('add_teacher')}}" class="nav-link px-2">Добавить учителя</a></li>
+          <li><a href="{{url_for('teachers')}}" class="nav-link px-2">Учителя</a></li>
+          <li><a href="{{url_for('students')}}" class="nav-link px-2">Студенты</a></li>
+          <li><a href="{{url_for('tests')}}" class="nav-link px-2">Тесты</a></li>
         </ul>
       </header>
     <div class = "content">
