--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,24 +1,76 @@
-/*Header*/
-header{
-    position: sticky;
-    top : 0;
-    z-index: 1000;
-    background-color: beige;
-    box-shadow: bisque;
+body {
+    font-family: Arial, sans-serif;
+    background-color: bisque;
+    margin: 0;
+    padding: 20px;
+}
+
+form {
+    max-width: 800px;
+    padding: 20px;
+    margin: auto;
+    background-color: #C0C2D8 ;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.test{
+    background: #AEC4D0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 10px 0;
+    transition: box-shadow 0.3s;
+}
+
+.container {
+    max-width: 800px;
+    padding: 20px;
+    background: red;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    color: #333;
 }
 
 
-.header_img{
-    height: 64px;
-    width: 64px;
-} 
+header{
+    background-color:#FFD1C4;
+}
 
-/*Footer*/
+details {
+    margin-top: 10px;
+}
 
-footer{
-    position: sticky;
-    bottom: 0;
-    z-index: 1000;
-    background-color: rgb(168, 231, 155);
-    box-shadow: rgb(168, 231, 155);
+summary {
+    cursor: pointer;
+    font-weight: bold;
+}
+.student {
+    background: floralwhite;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 10px 0;
+    transition: box-shadow 0.3s;
+}
+
+.student:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.teacher {
+    background: #BEDACB;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 15px;
+    margin: 10px 0;
+    transition: box-shadow 0.3s;
+}
+
+.teacher:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
