--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,21 +11,30 @@
 
 <body>
   <div class="page">
-    <div class = "container">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">  
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{{url_for('teachers')}}" class="nav-link px-2">Учителя</a></li>
-          <li><a href="{{url_for('students')}}" class="nav-link px-2">Студенты</a></li>
-          <li><a href="{{url_for('tests')}}" class="nav-link px-2">Тесты</a></li>
-        </ul>
-      </header>
+
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"> 
+  <div class="col-md-3 mb-2 mb-md-0"> 
+    <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none"> 
+      <img src="{{url_for('static',filename='img/logo.png')}}",alt='law'>
+     
+    </a>
+   </div> 
+   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0"> 
+    <li><a href="{{url_for('teachers')}}" class="nav-link px-2">Учителя</a></li>
+     <li><a href="{{url_for('tests')}}" class="nav-link px-2">Тесты</a></li> 
+     <li><a href="{{url_for('students')}}" class="nav-link px-2">Студенты</a></li> 
+     </ul> 
+     <div class="col-md-3 text-end">
+       <a type="button" class="btn btn-outline-primary me-2" href="{{url_for('save')}}">Сохранить</a>
+       </div> 
+</header>
+
     <div class = "content">
       {% block content %}{% endblock %}
     </div>
-  </div>
 </div>
 </body>
 
 
 
-</html>
+</html> 
