--- a/src/templates/students.html
+++ b/src/templates/students.html
@@ -12,20 +12,40 @@
         <label for="name">Имя студента:</label>
         <input type="text" id="name" name="name" required>
         <br><br>
-        <input type="submit" value="Добавить студента">
+        <input type="submit" value="Добавить">
     </form>
 
+    <h1>Студенты:</h1>
+    <div>
     {% for student in students %}
-        <div>
-            {{ student.name }}<br><br>
-            
-            <details> <summary>Результаты теста</summary>
+        <div class = "student">
+            {{ student.name }}
+            <details> 
+            <summary>Результаты теста</summary>
+
             <span>
             {% for test_results in student.test_results %}
+
                 <li>test_results</li>
+
             {% endfor %}
             </span>
+
             </details>
+
+            <details> 
+                <summary>Оценки студента</summary>
+    
+                <span>
+                {% for mark in student.marks %}
+    
+                    <li>mark</li>
+    
+                {% endfor %}
+                </span>
+    
+                </details>
         </div>
     {% endfor %}
+    </div>
 {% endblock %}
