--- a/src/templates/teachers.html
+++ b/src/templates/teachers.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-    <h1>Добавление нового учителя</h1>
+    <h1>Добавить нового учителя</h1>
     <form action="/teachers" method="POST">
         <label for="name">Имя учителя:</label>
         <input type="text" id="name" name="name" required><br><br>
@@ -16,4 +16,13 @@
 
         <input type="submit" value="Добавить">
     </form>
+    
+    <h1>Учителя:</h1>
+
+    {% for teacher in teachers %}
+        <div class="teacher">
+        {{teacher.name}}. По предмету: {{teacher.subj}}
+        </div>
+    {% endfor %}
+
 {% endblock %}
