--- a/src/templates/tests.html
+++ b/src/templates/tests.html
@@ -7,12 +7,12 @@
 
 {% block content %}
     <h1>Добавить новый тест</h1>
-    <form action="/tests" method="POST">
+    <form action="/tests" method="POST" class="adding" autocomplete="off">
         <label for="title">Название теста</label>
         <input type="text" id="title" name="title" required><br><br>
 
         <label for="max_questions">Кол-во вопросов</label>
-        <input type="number" id="max_questions" name="max_questions" required><br><br>
+        <input type="number" id="max_questions" name="max_questions" required  required min="1" step="1"><br><br>
 
         <label for="teacher_index">Выбрать учителя:</label>
         <select id="teacher_index" name="teacher_index" required>
@@ -25,18 +25,25 @@
     </form>
 
 
-    <h1>Тесты</h1>
+    <h1>Тесты:</h1>
 
 <div>
     {% for test in tests %}
-    <div class = 'test'>
+    <div class = 'list_element'>
         <li>{{test.title}}
-        {% if test.is_draft %}
-                Готова к нажатию
+            {% if test.is_draft %}
+            <form action="/tests/{{ loop.index0 }}/activate" method="POST" style="display:inline;">
+                <input type="submit" value="Активировать">
+            </form>
             {% else %}      
-                Проверить
-            {% endif %}
+            <form action="/tests/{{ loop.index0 }}/check" method="POST" style="display:inline;">
+                <input type="submit" value="Проверить">
+            </form>
+            {% endif %} 
             </li>
+            <form class = 'deletion' action="/tests/{{ loop.index0 }}/delete" method="POST" style="display:inline;">
+                <input type="submit" value="Удалить">
+            </form>
     </div>
     {% endfor %}
 </div>
