--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,10 +20,10 @@
     </a>
    </div> 
    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0"> 
-    <li><a href="{{url_for('teachers')}}" class="nav-link px-2">Учителя</a></li>
-     <li><a href="{{url_for('tests')}}" class="nav-link px-2">Тесты</a></li> 
-     <li><a href="{{url_for('students')}}" class="nav-link px-2">Студенты</a></li>
-     <li><a href="{{url_for('reviews')}}" class="nav-link px-2">Отзывы</a></li>  
+    <li><a href="/teachers" class="nav-link px-2">Учителя</a></li>
+     <li><a href="/tests" class="nav-link px-2">Тесты</a></li> 
+     <li><a href="/students" class="nav-link px-2">Студенты</a></li>
+     <li><a href="/reviews" class="nav-link px-2">Отзывы</a></li>  
      </ul> 
      <div class="col-md-3 text-end">
        <a type="button" class="btn btn-outline-primary me-2" href="{{url_for('save')}}">Сохранить</a>
